fixed image width causing whitespace, added digital images

--- a/src/components/portfolio/SetImages.css
+++ b/src/components/portfolio/SetImages.css
@@ -51,7 +51,7 @@
     font-size: large;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 650px) {
     .all-img-container {
         grid-template-columns: 1fr 1fr;
     }
@@ -71,7 +71,13 @@
     }
 }
 
-@media only screen and (min-width: 950px) {
+@media only screen and (max-width: 1089px) {
+    .frame-num {
+        gap: 1rem;
+    }
+}
+
+@media only screen and (min-width: 1090px) {
     .all-img-container {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
